# password_vault

./: README.md  cred.py  pyproject.toml
man/: vault.1
password_vault.egg-info/: PKG-INFO  SOURCES.txt
scripts/: setup_db.sh
vault/: authenticator.py  cli.py  logger.py
