[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "password-vault"
version = "0.1.0"
description = "Local password vault CLI for Termux"
requires-python = ">=3.10"

[project.scripts]
vault = "vault.cli:main"

[tool.setuptools]
packages = ["vault"]
#Only for the termux build apps.    